fixed black check icon on ios /addresses #427

--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -73,7 +73,7 @@
 }
 
 .search-form input[type=checkbox]:checked + label:before {
-  content: "✔";
+  content: "✔\fe0e";
 }
 
 /* checked icon */
